--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmv7xVtFZ8u/Y5Ti0Y44yL",
+      "authorship_tag": "ABX9TyMNh1/B+uxyIhobxeySSyad",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,7 +467,7 @@
         "id": "YUOI-nf63v96",
         "outputId": "5c1730de-7e9d-4db7-876a-64048822cc68"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "id": "0J2qrEjW4ZIC",
         "outputId": "f173f4df-9c71-4e6f-e207-8b9ac5741160"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,6 +574,12 @@
         "    self.name = name\n",
         "    self.number = number\n",
         "\n",
+        "  def set_name(self, newname):\n",
+        "    self.name = newname\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.name\n",
+        "\n",
         "  def __repr__(self) :\n",
         "     return f'Name: {self.name}.'"
       ],
@@ -592,8 +598,69 @@
       "metadata": {
         "id": "3vLWNxx_46EE"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s2.get_name()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "3QyIavtMIDHc",
+        "outputId": "5629cad5-1797-4243-801d-9c92f94bc1a5"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Clark Kent'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s2.set_name('Bob')\n",
+        "s2.get_name()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "jUKKBXwCIrWF",
+        "outputId": "ae5f84be-3d7b-42f8-9b72-f4f5c0d2638f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Bob'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -607,7 +674,7 @@
         "id": "a9SutcvK5KIx",
         "outputId": "ebb55e28-9143-4692-ca28-cd487f024e86"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,6 +682,94 @@
           "text": [
             "Name: James Bond.\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course not in self.courses:\n",
+        "      self.courses.append(course)\n",
+        "    else:\n",
+        "      print(f'You have already enrolled in course: {course}')\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses"
+      ],
+      "metadata": {
+        "id": "SfRC2lmGODYb"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = Student('Bob', '123')"
+      ],
+      "metadata": {
+        "id": "q3b9F0V3Pdl1"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.enroll('ABC123')\n",
+        "s.enroll('ABC456')\n",
+        "s.enroll(\"ABC789\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HbLP8FgFPjzf",
+        "outputId": "c7c6eded-9e51-4a65-c8a8-4473fc7743ed"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You have already enrolled in course: ABC123\n",
+            "You have already enrolled in course: ABC456\n",
+            "You have already enrolled in course: ABC789\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JXZ2dMxMQLgF",
+        "outputId": "a6096111-b99c-468a-bc77-ba8a29f0a4e0"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['ABC123', 'ABC456', 'ABC789']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
         }
       ]
     }
