--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNh1/B+uxyIhobxeySSyad",
+      "authorship_tag": "ABX9TyPFm/x6yFgEEV2yakKJSefI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,6 +482,65 @@
     {
       "cell_type": "code",
       "source": [
+        "def calcFee(hours, decimals=2):\n",
+        "  fee = round (5 + hours * 2.5, decimals)\n",
+        "  return fee\n",
+        "def displayFee(fee):\n",
+        "  print(fee)\n",
+        "hours_parked= int(input('Enter Hours Parked:'))\n",
+        "f = calcFee(hours_parked)\n",
+        "displayFee(f)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GUdytBta6ovO",
+        "outputId": "42303d30-fb24-44e5-f7aa-db725799c50f"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Hours Parked:3\n",
+            "12.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse(string):\n",
+        "    if len(string) == 1:\n",
+        "        return string\n",
+        "    else:\n",
+        "        return reverse(string[1:])+string[0]\n",
+        "print(reverse('Hello'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OCBoIOtC62Oj",
+        "outputId": "279688d1-00ce-45a5-f09a-ae5e4703fd53"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "olleH\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def rev(s):\n",
         "  if len(s) == 1:\n",
         "    return s\n",
@@ -586,7 +645,7 @@
       "metadata": {
         "id": "Gtqi8A7k4uRG"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +657,7 @@
       "metadata": {
         "id": "3vLWNxx_46EE"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +673,7 @@
         "id": "3QyIavtMIDHc",
         "outputId": "5629cad5-1797-4243-801d-9c92f94bc1a5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +704,7 @@
         "id": "jUKKBXwCIrWF",
         "outputId": "ae5f84be-3d7b-42f8-9b72-f4f5c0d2638f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +765,7 @@
       "metadata": {
         "id": "SfRC2lmGODYb"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +776,7 @@
       "metadata": {
         "id": "q3b9F0V3Pdl1"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,7 +793,7 @@
         "id": "HbLP8FgFPjzf",
         "outputId": "c7c6eded-9e51-4a65-c8a8-4473fc7743ed"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +818,7 @@
         "id": "JXZ2dMxMQLgF",
         "outputId": "a6096111-b99c-468a-bc77-ba8a29f0a4e0"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
